@@ -7,9 +7,20 @@
       name="nuplone"
       title="NuPlone"
       directory="profiles/default"
-      description="Extension profile for NuPlone Product."
+      description="An alternative theme for Plone 3"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       for="Products.CMFPlone.interfaces.IPloneSiteRoot"
       />
+
+  <!-- The name of the uninstall profile must be alphabetically after the install profile -->
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="Uninstall NuPlone"
+      directory="profiles/uninstall"
+      description="Uninstall informtation for NuPlone Product."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      />
+
 
 </configure>
