@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+
+<object name="portal_skins" allow_any="False" cookie_persistence="False"
+   default_skin="Plone Default">
+ 
+ <skin-path name="NuPlone" remove="True" />
+ <object name="nuplone_scripts" remove="True "/>
+ <object name="nuplone_images" remove="True "/>
+ <object name="nuplone_styles" remove="True "/>
+ <object name="nuplone_templates" remove="True "/>
+
+</object>
